# Projeto_Streamlit

./: Cadastro.py  Clientes.csv  pyproject.toml
pages/: Consulta.py
