[tool.poetry]
name = "projeto prático streamlit"
version = "0.1.0"
description = ""
authors = ["Luiz Carlos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
